MB-21597: Use OPERATION_CAS rather than OPERATION_REPLACE

REPLACE means unconditional replace in old-style Memcached parlance.
CAS is the actual operation required, as it actually verifies the CAS.
See e.g.
https://github.com/couchbase/memcached/blob/master/engines/default_engine/items.c#L564

Update the ewouldblock_engine error injection to only inject
CasMismatch for CAS operatons (and not for SET operations) - this
ensures the original unit test for CAS checking
(McdTestappTest.SubdocCASAutoRetry) now correctly tests for this
issue, and will fail without the fix to subdocument.cc.

Change-Id: I67393114110add05807dbb8dc6bdcc7467f4b887
Reviewed-on: http://review.couchbase.org/69736
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>
Reviewed-by: Mark Nunberg <mark.nunberg@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>